--- a/git.html
+++ b/git.html
@@ -408,6 +408,31 @@ summary {
 </ul>
 </div>
 </div>
+<div id="from-githun-and-rstudio" class="section level3">
+<h3>from githun and rstudio</h3>
+<div id="clone-and-record" class="section level4">
+<h4>clone and record</h4>
+<ul>
+<li>git clone : the clone the whole file form remote repo</li>
+<li>git status</li>
+<li>git log</li>
+<li>git log –online #### remote</li>
+<li>git remote add origin url : add a remote to existing local repo</li>
+<li>git remote –verbose : checking the remote</li>
+<li>git remote show origin : checkiing the remote in details #### push</li>
+<li>git push –set-upstream origin master : push local master to github master and lave local master track master on github</li>
+<li>git push -u origin master : once only #### regular push</li>
+<li>git push</li>
+<li>git push origin master #### pull</li>
+<li>git pull : keep the local file up-to-date</li>
+<li>git pull –ff-only : <strong>pull commits and don’t let it ptu yuo in a merge conflic pickle</strong></li>
+<li><strong>git fetch</strong></li>
+<li>git checkout [branch-name]: switch to a brance #### checking</li>
+<li>git remote -v</li>
+<li>git branch -vv</li>
+</ul>
+</div>
+</div>
 </div>
 </div>
 
